cabal-version:      3.0
name:               ykman-helper
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             jott8
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common deps
    build-depends: 
        base                 ^>=4.16.4.0, 
        process              ^>=1.6.16.0, 
        Hclip                ^>=3.0.0.4, 
        mtl                  ^>=2.3.1,
        optparse-applicative ^>=0.18.1.0,
        text                 ^>=2.1.1,
        containers           ^>=0.6.5.1,
    default-extensions:
        OverloadedStrings,

executable ykham
    import:           deps
    main-is:          Ykham.hs
    hs-source-dirs:   app
    default-language: Haskell2010
